# dicomorganizer

./: .gitignore  .gitlab-ci.yml  README.md  notes.txt  pyproject.toml  requirements.txt  setup.py
apps/cli/Anonymizer/: main.py
apps/cli/dicomorganizer/: main.py
apps/cli_app/: log_config.py  main.py
dicomorganizer/: __init__.py  dicom_manager.py  patients.db  utils.py
dicomorganizer/apps/cli/Anonymizer/: main.py
dicomorganizer/apps/cli/dicomorganizer/: gui.py  log_config.py  main.py
tests/: test_dicom_manager.py  test_organize_dicom.py
