[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dicomorganizer"
version = "0.5.0"
description = "A package to manage, process, and anonymize DICOM files."
readme = "README.md"
authors = [{name = "Kobe Bamps", email = "kobe.bamps@uzleuven.be"}]
license = {text = "MIT"}  # Adjust to match your actual license
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kbamps/dicomorganizer"

[dependencies]
pydicom = ">=2.0.0"
tqdm = "4.67.1"
pandas = "2.2.3"


[project.scripts]
dicom-organizer = "dicomorganizer.apps.cli.dicomorganizer:main"


