[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dicomorganizer"
version = "0.5.3"
description = "A package to manage, process, and anonymize DICOM files."
readme = "README.md"
authors = [{name = "Kobe Bamps", email = "kobe.bamps@uzleuven.be"}]
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pydicom>=2.0.0",
  "tqdm>=4.67.1",
  "pandas>=2.2.3"
]


[project.urls]
Homepage = "https://github.com/kbamps/dicomorganizer"


[project.scripts]
dicom-organizer = "dicomorganizer.apps.cli.dicomorganizer:main"
